# distill-modern-bert

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
dmbert/: config.py  embed_distill.py
tests/: conftest.py  test_embed_distill.py
