[project]
name = "distill-modern-bert"
version = "0.1.0"
description = "Distill the embeddings of a base model to a smaller dimension using Model2Vec framework."
readme = "README.md"
authors = [
    {name = "Adrien Riaux", email = "adrien.riaux@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "model2vec>=0.3.9",
    "numpy==1.26.4",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.1",
    "torch==2.2.2",
]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pre-commit>=4.1.0",
    "ruff>=0.9.6",
]
test = [
    "pytest>=8.3.4",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/*"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4
fix = true
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = ["E501", "E731", "B006", "B008"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 100
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
